test/good/ex2.cb
def main () {
    let x = 123;
    foo(x);
}

def foo(x: int) -> int {
    let y = 0; 
    y
}
