test/bad/duplicate_arg.cb
def foo(x: int, x: int) {}
